Fix JDK warnings in screenshot tests
Bug: 482314257, 482343977
Test: Existing integration tests passed
Change-Id: I63d86ab8fc19347cafc122455925b0e7b956de17